kubernetes/databases/forgejo-postgres/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
